(web) fixed content alignment issue on course view

--- a/SchoolSquirrel/src/styles.scss
+++ b/SchoolSquirrel/src/styles.scss
@@ -155,6 +155,10 @@ editor {
     outline: none;
 }
 
+.flex-wrap-none {
+    flex-wrap: nowrap;
+}
+
 
 /* Material Icons */
 
